# mxsend

./: .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.ci  Dockerfile.ci.macos  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  RELEASE.md  build.rs  cliff.toml  deny.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: integration_test.rs
tests/common/: fixtures.rs  mod.rs  synapse.rs  sync_thread.rs
