[package]
name = "matrix-send"
version = "0.1.0"
edition = "2024"
description = "A command-line tool for sending messages via Matrix"

[lib]
name = "matrix_send"
path = "src/main.rs"

[dependencies]
matrix-sdk = { version = "0.16.0", features = ["e2e-encryption"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive", "env"] }
anyhow = "1.0.95"
futures-util = "0.3.32"

[dev-dependencies]
testcontainers = "0.27.3"
env_logger = "0.11.10"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
serial_test = "3.2.0"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false

[profile.dev]
opt-level = 1
debug = true
incremental = true
panic = "unwind"
overflow-checks = true
