[package]
name = "mxsend"
version = "0.1.0-rc.1"
edition = "2024"
description = "A command-line tool for sending messages via Matrix"
license = "MIT OR Apache-2.0"
repository = "https://github.com/adminelix/mxsend"

[dependencies]
matrix-sdk = { version = "0.16.0", default-features = false, features = ["e2e-encryption", "automatic-room-key-forwarding", "rustls-tls", "bundled-sqlite"] }
tokio = { version = "1.52", features = ["full"] }
clap = { version = "4.6", features = ["derive", "env"] }
anyhow = "1.0.102"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap-verbosity-flag = { version = "3.0", default-features = false, features = ["tracing"] }

[dev-dependencies]
testcontainers = "0.27.3"
env_logger = "0.11.10"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
serial_test = "3.4.0"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false

[profile.dev]
opt-level = 1
debug = true
incremental = true
panic = "unwind"
overflow-checks = true
